# controllino_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
firmware/: CMakeLists.txt  bak_CMakeLists.txt  chatter.cpp  controllino.cpp
launch/: controllino_communcation.launch
scripts/: controllino_ss.py
